--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img
+        <!-- <img
           src="https://images.unsplash.com/photo-1682686579688-c2ba945eda0e?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           style="width: 100%"
-        />
+        /> -->
         <div class="text">Caption Text</div>
       </div>
 
