--- a/index.html
+++ b/index.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div class="slideshow-container">
-      <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <!-- <img
-          src="https://images.unsplash.com/photo-1682686579688-c2ba945eda0e?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          style="width: 100%"
-        /> -->
-        <div class="text">Caption Text</div>
-      </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="main" id="mn">
+<h1 id="text">Touch The button to turn ON the light.</h1>
+<img id="bulbof" class="off" src="https://github.com/subahan143/Bulb-OF-ONN/blob/master/images/bulboff.png?raw=true" alt="">
+<img id="bulbon" class="onn" src="https://github.com/subahan143/Bulb-OF-ONN/blob/master/images/bulbon.png?raw=true" alt="">
+<span class="spn">
+  <button id="bton" onclick="ONN()">ON</button>
+  <button id="btof" onclick="OFF()">OFF</button>
+</span>
 
-      <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img
-          src="https://images.unsplash.com/photo-1682687981922-7b55dbb30892?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          style="width: 100%"
-        />
-        <div class="text">Caption Two</div>
-      </div>
 
-      <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img
-          src="https://images.unsplash.com/photo-1688510193860-161fc8f052c2?q=80&w=1468&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          style="width: 100%"
-        />
-        <div class="text">Caption Three</div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">❮</a>
-      <a class="next" onclick="plusSlides(1)">❯</a>
-    </div>
-    <br />
-
-    <div style="text-align: center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
-
-    <script src="./script.js"></script>
-  </body>
+  </div>
+  
+</body>
+<script src="script.js"></script>
 </html>
